--- a/src/scss/_components.scss
+++ b/src/scss/_components.scss
@@ -256,7 +256,7 @@
 .giftroom,
 .content {
   background-image: radial-gradient(transparent, rgba(0, 0, 0, 0.65)),
-    url(../resources/img/bedroom.svg);
+    url(../resources/img/bedroom1.jpg);
   background-position: 70%;
   background-repeat: no-repeat;
   background-size: cover;
